--- a/_config.yml
+++ b/_config.yml
@@ -241,3 +241,10 @@ defaults:
       comments: true # true
       share: false
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
