--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,9 @@
 main:
   - title: "About"
     url: /about/
+
+projects:
+  - title: "Projects"
+    children:
+      - title: "estr"
+        url: "https://estr.billbai.me"
